--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -1,4 +1,3 @@
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-@import "simple-sidebar";
+//bootstrap
+@import "~bootstrap/scss/bootstrap";
+@import "style";
