--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -1,4 +1,10 @@
 //bootstrap
-@import "~bootstrap/scss/bootstrap";
+//@import "~bootstrap/scss/bootstrap";
+
+@import "~tailwindcss/base";
+@import "~tailwindcss/components";
+@import "~tailwindcss/utilities";
+@import "reboot";
+@import "categories";
 @import "style";
-@import "vue-toased";
+@import "vue-toasted";
