--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -1,10 +1,10 @@
-//bootstrap
+////bootstrap
 //@import "~bootstrap/scss/bootstrap";
 
 @import "~tailwindcss/base";
 @import "~tailwindcss/components";
 @import "~tailwindcss/utilities";
-@import "reboot";
+//@import "reboot";
 @import "categories";
 @import "style";
 @import "vue-toasted";
